Implicit surface as point spheres.

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="EntityScene.cu.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="primage\CellBillboard.cpp" />
     <ClCompile Include="primage\TumourScene.cpp" />
     <ClCompile Include="TwoPassScene.cpp" />
     <ClCompile Include="visualisation\Axis.cpp" />
@@ -143,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityScene.h" />
+    <ClInclude Include="primage\CellBillboard.h" />
     <ClInclude Include="primage\TumourScene.h" />
     <ClInclude Include="TwoPassScene.h" />
     <ClInclude Include="visualisation\Axis.h" />
